src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

#container {
  position: relative;
  overflow-x: hidden;
}

#first-screen {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  position: relative;
  width: 100vw;
  height: 100vh;
  background: url("./assets/images/background.png") no-repeat center;
  background-size: cover;
  overflow-x: hidden;
}

#logo-container {
  margin-top: 48px;
  width: 40vw;
  height: 40vh;
  background: url("./assets/images/logoMarca.png") no-repeat center;
  background-size: contain;
}

@media (max-width: 609px) {
  #logo-container {
    width: 40vh;
    height: 40vw;
  }
}

#info-container {
  position: relative;
  height: 50vh;
  width: 100vw;
  overflow-x: hidden;
}

#nails-cards-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-evenly;
  position: relative;
  width: 100vw;
  height: 100vh;
  background: url("./assets/images/background-nails.png") no-repeat center;
  background-size: cover;
  overflow-x: hidden;
}

header {
  display: inline-flex;
  position: absolute;
  top: 1vmax;
  left: 4vw;
}

@media (max-width: 680px) {
  header {
    top: 2vmax;
  }
}

header h3 {
  color: white;
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  font-size: 1.8vw;
}

@media (max-width: 768px) {
  header h3 {
    font-size: 2.6vmax;
  }
}

.space-given {
  margin-left: 4vw;
}

main {
  position: relative;
}

main h1 {
  color: white;
  font-family: "Playfair Display", serif;
  font-size: 4vmax;
  line-height: 8vmax;
}

main button {
  margin-top: 4vmax;
}

